--- a/Website/homepage.html
+++ b/Website/homepage.html
@@ -41,24 +41,12 @@
         <button class="questions">Exam Questions</button>
     </div>
 
-    <div class="middle">
-        <div class="box">
-            <div class="top-box">
-
-            </div>
-            <div class="bottom-box">
-
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="top-box">
-            </div>
-            <div class="bottom-box">
-
+    <div class="center">
+        <div class="boxes">
+            <div class="box">
+                
             </div>
         </div>
     </div>
-
 </body>
 </html>
