--- a/Website/homepage.html
+++ b/Website/homepage.html
@@ -36,7 +36,7 @@
 
     <div class="top">
         <img class="back" src="Icons/back.png">
-        <div class="welcome">Welome!</div>
+        <div class="welcome">Welcome!</div>
         <button class="study">Start studying</button>
         <button class="questions">Exam Questions</button>
     </div>
