--- a/Website/login.html
+++ b/Website/login.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-
-    <link rel="stylesheet" href="CSS/Register/index.css">
+    <title>Log In</title>
+    <link rel="stylesheet" href="CSS/Log In/index.css">
     <link rel="stylesheet" href="CSS/HomePage/index.css">
     <link rel="stylesheet" href="CSS/HomePage/header.css">
 </head>
@@ -41,7 +40,7 @@
             <input type="text" placeholder="Password" class="pass">
 
             <button class="log-button">Log In</button>
-            <div class="no_acc">Already have an account? Log In.</div>
+            <div class="no_acc">Dont have an account? Sign up.</div>
         </div>
     </div>
 </body>
